// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`file > basic 1`] = `
"import { FileInterface } from "@duplojs/server-utils/file";

export type File = FileInterface;"
`;

exports[`file > basic 2`] = `
"import { FileInterface } from "@duplojs/server-utils/file";

export type FileIdentifier = FileInterface;"
`;

exports[`file > with preset importContext 1`] = `
"import { FileInterface } from "@duplojs/server-utils/file";

export type File = FileInterface;"
`;
